# ie0417

./: .gitignore  README.md
.github/workflows/: ci-cd.yml
Glosario/: README.md  ordenar_conceptos.py
laboratorios/laboratorio2/: README.md
laboratorios/laboratorio2/ejercicio1/: Doxyfile  inventario.cpp  inventario.hpp  main.cpp  mainpage.md  producto.cpp  producto.hpp
laboratorios/laboratorio2/ejercicio2/: main.py  proyecto.py  tarea.py
laboratorios/laboratorio2/ejercicio2/docs/: conf.py  index.rst  proyecto.rst  tarea.rst
laboratorios/laboratorio3/: README.md
laboratorios/laboratorio4/: README.md
laboratorios/laboratorio5/: .env  Dockerfile  README.md  docker-compose.yml  start.py
laboratorios/laboratorio5/config/: settings.py  urls.py
laboratorios/laboratorio5/notas/: admin.py  models.py  urls.py  views.py
laboratorios/laboratorio5/notas/migrations/: 0001_initial.py
laboratorios/laboratorio6/: README.md
laboratorios/laboratorio6/src/: barrier.cpp  condition_variable.cpp  deadlock.cpp  ejemploFinal.cpp  mutex.cpp  race_conditions.cpp  semaforos.cpp
laboratorios/laboratorio7/: README.md
laboratorios/laboratorio7/src/: asan.cpp  errores.cpp  gdb.cpp  hilos1.cpp  hilos2.cpp  valgrind.cpp
laboratorios/laboratorio8/: README.md  semilla.cpp
laboratorios/laboratorio8/functional_testing/: CMakeLists.txt  authentication.h  database.h  mock_database.h  test_authentication.cpp
laboratorios/laboratorio8/unit_testing/: CMakeLists.txt  calculator.h  test_calculator.cpp
tareas/tarea1/: README.md
(+110 files in other folders)
